<resources>
    <string name="app_name">Articles</string>
    <string name="title_activity_splach">SplachActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="cancel">Отмена</string>
    <string name="auth">Авторизация</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="drafts">Drafts</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>