<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/create" />

    <item
        android:id="@+id/navigation_drafts"
        android:icon="@drawable/baseline_bookmarks_24"
        android:title="@string/drafts" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/outline_person_24"
        android:title="@string/profile" />

</menu>